Finish develop render table algorithm

--- a/public/table.html
+++ b/public/table.html
@@ -35,16 +35,18 @@
                     <li class="table__column-item">E</li>
                     <li class="table__column-item">F</li>
                 </ul>
-                <ul class="table__row-list">
-                    <li class="table__row-item">1</li>
-                    <li class="table__row-item">2</li>
-                    <li class="table__row-item">3</li>
-                    <li class="table__row-item">4</li>
-                    <li class="table__row-item">5</li>
-                    <li class="table__row-item">6</li>
-                </ul>
-                <div class="table__cells">
-                    <input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell">
+                <div class="table__container">
+                    <ul class="table__row-list">
+                        <li class="table__row-item">1</li>
+                        <li class="table__row-item">2</li>
+                        <li class="table__row-item">3</li>
+                        <li class="table__row-item">4</li>
+                        <li class="table__row-item">5</li>
+                        <li class="table__row-item">6</li>
+                    </ul>
+                    <div class="table__cells">
+                        <input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell"><input type="text" class="table__cell">
+                    </div>
                 </div>
             </div>
 
